# django-florist

./: .env.example  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0002_product_manufactured_at.py  0003_version.py  0004_alter_version_product_alter_version_title.py  0005_alter_product_category.py  0006_alter_contacts_address_alter_product_price_and_more.py  0007_alter_product_category_alter_product_preview.py  0008_alter_product_preview.py  0009_product_creator.py  0010_alter_product_options_product_is_published.py
catalog/templates/catalog/: 404.html  about.html  base.html  category_detail.html  category_list.html  contacts.html  gallery.html  index.html  menu.html  new_product.html  prices.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  services.html  thanks.html
config/: settings.py  urls.py
fixtures/: catalog_data.json  groups.json
static/css/: style.css
static/js/: camera.js  cform.js
users/: forms.py  models.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: base.html  login.html  password_reset_done.html  reset_password.html  user_detail.html  user_form.html  verification-result.html
