[tool.poetry]
name = "django-florist"
version = "0.1.0"
description = ""
authors = ["nnikitenko <ninanineliya@gmail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.x"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
pytils = "^0.4.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
